dgm-lib v1.x.x
 * SFML 2.6.0 is now used
 * CMakeLists.txt overhauled:
	* Dependencies are managed with CMake Package Manager
	* Can be used as a subproject of another project which correctly handles linkage of all dependencies
 * Added type `dgm::ErrorMessage` which is an alias for returning `std::string` error messages wrapped in `std::expected`
 * Documentation changes:
	* Added documentation for `dgm::JsonLoader`
	* Added documentation on CMake integration
 * Changed `dgm::LoaderInterface` to require `std::filesystem::path` instead of `std::string`
 * `dgm::ResourceManager` has been revamped
	* It can be used to store almost any kind of resource by providing user callbacks that handle the loading. Only requirement is that the resource needs to be default-constructible.
	* It is completely `noexcept` and `[[nodiscard]]`
	* It properly invokes destructors
	* It no longer depends on `dgm::LoaderInterface` as loading itself is handled by the callbacks
	* It can list all resource ids tied to particular type
	* It no longer prevents two resources of distinct types not be able to have the same ID
 * Warning about name shadowing has been turned into error

dgm-lib v1.10.0
 * `dgm::ResourceManager` can now load `dgm::Clip` from JSON files
 * `dgm:Clip` no longer has to be moved into `dgm::TileMap`
 * `dgm::Camera` no longer maintains a reference to `sf::View` and instead provides API `getCurrentView()` and `getDefaultView()`
	* This prevents an issue where View could be passed down to Camera before being properly initialize and zooming would then be broken
	* It also prevents possible memory leak where the View would be destroyed before Camera

dgm-lib v1.9.0
 * `dgm::Animation` no longer depends on `sf::Sprite`
	* Use `dgm::Animation::getCurrentFrame()` instead
 * Bumped nlohmann json to v3.11.2
	* This resolves a warning about `<ciso646>` being removed in C++20

dgm-lib v1.8.2
 * Added basic collision detection between VisionCone and Point